utoipa-gen/tests/snapshots/openapi_derive__derive_generic_openapi_component_schemas.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: schemas
---
{
  "schemas": {
    "dto.get.unit.Response": {
      "properties": {
        "address": {
          "type": "string"
        },
        "city": {
          "type": "string"
        },
        "country": {
          "type": "string"
        },
        "description": {
          "type": [
            "string",
            "null"
          ]
        },
        "id": {
          "format": "int64",
          "type": "integer"
        },
        "latitude": {
          "format": "double",
          "type": "number"
        },
        "longitude": {
          "format": "double",
          "type": "number"
        },
        "region": {
          "type": [
            "string",
            "null"
          ]
        },
        "title": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "latitude",
        "longitude",
        "title",
        "country",
        "city",
        "address"
      ],
      "type": "object"
    },
    "dto.page.Response_dto.get.unit.Response": {
      "properties": {
        "list": {
          "items": {
            "$ref": "#/components/schemas/dto.get.unit.Response"
          },
          "type": "array"
        },
        "num": {
          "format": "int64",
          "minimum": 0,
          "type": "integer"
        },
        "size": {
          "format": "int64",
          "minimum": 0,
          "type": "integer"
        },
        "total": {
          "format": "int64",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "list",
        "num",
        "size",
        "total"
      ],
      "type": "object"
    }
  }
}
