utoipa-gen/tests/snapshots/openapi_derive__derive_logical_or_security_requirement.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: security
snapshot_kind: text
---
[
  {
    "oauth": [
      "a"
    ]
  },
  {
    "oauth": [
      "b"
    ]
  }
]
