utoipa-gen/tests/snapshots/openapi_derive__derive_openapi_with_custom_info.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: info
snapshot_kind: text
---
{
  "contact": {
    "name": "Test"
  },
  "description": "description override",
  "license": {
    "identifier": "MIT OR Apache-2.0",
    "name": "MIT OR Apache-2.0"
  },
  "termsOfService": "http://localhost/terms",
  "title": "title override",
  "version": "1.0.0"
}
