utoipa-gen/tests/snapshots/openapi_derive__derive_openapi_with_generic_response.snap
---
source: utoipa-gen/tests/openapi_derive.rs
assertion_line: 281
expression: response
---
{
  "content": {
    "application/json": {
      "schema": {
        "properties": {
          "value": {
            "type": "string"
          }
        },
        "required": [
          "value"
        ],
        "type": "object"
      }
    }
  }
}
