utoipa-gen/tests/snapshots/openapi_derive__derive_openapi_with_generic_schema_with_as.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: schema
snapshot_kind: text
---
{
  "properties": {
    "value": {
      "type": "string"
    }
  },
  "required": [
    "value"
  ],
  "type": "object"
}
