utoipa-gen/tests/snapshots/openapi_derive__derive_openapi_with_licence.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: info
snapshot_kind: text
---
{
  "identifier": "MIT",
  "name": "licence_name"
}
