utoipa-gen/tests/snapshots/openapi_derive__derive_openapi_with_responses.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: responses
snapshot_kind: text
---
{
  "MyResponse": {
    "description": "Ok"
  }
}
