utoipa-gen/tests/snapshots/openapi_derive__openapi_resolvle_recursive_references.snap
---
source: utoipa-gen/tests/openapi_derive.rs
expression: schemas
snapshot_kind: text
---
{
  "Account": {
    "properties": {
      "foobar": {
        "$ref": "#/components/schemas/Foobar"
      },
      "id": {
        "format": "int32",
        "type": "integer"
      }
    },
    "required": [
      "id",
      "foobar"
    ],
    "type": "object"
  },
  "Foobar": {
    "default": null
  },
  "Person": {
    "properties": {
      "accounts": {
        "items": {
          "oneOf": [
            {
              "$ref": "#/components/schemas/Account"
            },
            {
              "type": "null"
            }
          ]
        },
        "type": "array"
      },
      "name": {
        "type": "string"
      }
    },
    "required": [
      "name",
      "accounts"
    ],
    "type": "object"
  }
}
